test/fail/enhanced-migration/enh-mig-test1/m3.mo
module {
    // Drop a;
    public func migration(_ : { a : Text }) : {} { {} };
};
